--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -936,13 +936,13 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>C02908700CDJP4FCB</string>
+			<string></string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
-			<data>IH10jUQA</data>
+			<data></data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemMemoryStatus</key>
@@ -950,9 +950,9 @@
 			<key>SystemProductName</key>
 			<string>MacBookPro15,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02Y9TZRKGYG</string>
+			<string></string>
 			<key>SystemUUID</key>
-			<string>905CB873-796C-40E1-99B8-6C062F0CD37D</string>
+			<string></string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
